--- a/sass/style.scss
+++ b/sass/style.scss
@@ -1,201 +1,13 @@
 
-@use "sass:color";
-@use 'utilities' as *;  
+@forward "sass:color";
+@forward "sass:math";
 @use 'loading' as *;
-@use 'forms-main' as *;
 @use 'calendar' as *;
+@use 'calendarList' as *;
+
+@use "main" as *;
 
 
+@use "mobile.scss"; 
 
-.mindevents_meta_box { 
-  .occurance-container {
-    padding: 10px;
-    border: 2px solid $info;
-    background: color.adjust($info, $lightness: 10%);
-    border-radius: 20px;
-    margin-bottom: 20px;
-    &.today {
-      background: color.adjust($success, $lightness: 30%);
-      border: 2px solid color.adjust($success, $lightness: 10%);
-      border-radius: 20px;
-      // color: #fff;
-    }
-    &.past-event {
-      //make this container toggleable
-      table {
-        display: none;
-      }
-      span.toggle-expand {
-        cursor: pointer;
-        font-weight: bold;
-        text-transform: uppercase;
-        font-size: .7em;
-      }
-      
-      
-    }
-    &.show {
-      background: color.adjust($success, $lightness: 30%);
-      table {
-        display: table; 
-      }
-    }
-  }
-  a.button, button{
-    cursor: pointer;
-    border: 1px solid color.adjust($primary, $lightness: -10%);
-    padding: 5px 7px;
-    border-radius: 0;
-    color: #fff !important;
-    background: $primary;
-    &:hover {
-      background: color.adjust($primary, $lightness: -10%);
-    }
-    &.clear-occurances {
-      margin-top: 5px;
-    }
-    &.button-success {
-      color: #fff;
-      background: $success; 
-      border: color.adjust($danger, $lightness: -10%)
-    }
-    &.button-danger {
-      color: #fff;
-      background: $danger;
-      border: color.adjust($danger, $lightness: -10%)
-    }
-    &.add-event-occurrence {
-      color: #fff;
-      background: $secondary;
-      border: color.adjust($secondary, $lightness: -10%)
-    }
-    &.button-white {
-      background: #fff;
-      color: $dark;
-    }
-    &.checked-in {
-      background: $success;
-      color: #353535;
-      border-color: #a6a6a6;
-    }
-    &.disabled {
-      background: $info;
-      color: #414141;
-      border-color: #a6a6a6;
-    }
-  }
-  h3 {
-    margin-top: 0;
-    margin-bottom: 3px;
-  }
-  .status {
-    font-weight: bold;
-    display: inline-block;
-    padding: 5px 10px;
-    border-radius: 5px;
-    background: $danger;
-    color: #fff;
-    &.completed {
-      background: $success;
-      color: #fff;
-    }
-    &.processing {
-      background: $info;
-      color: $dark;
-    }
-
-  }
-}
-.mindevents_meta_box {
-
-  #errorBox {
-    opacity: 0;
-
-    span {
-      border: $danger;
-      background-color: color.adjust($danger, $lightness: 35%);
-      margin: 5px 0;
-      display: block;
-      padding: 5px 7px;
-      font-weight: bold;
-      font-size: 1em;
-      color: $danger;
-    }
-    &.show {
-      opacity: 1;
-      @include transition(200ms);
-    }
-  }
-
-  h3.offers-title {
-    margin-left: 1%;
-  }
-  .offer-options {
-    width: 100%;
-    display: flex;
-    flex-direction: column;
-    .single-offer {
-      display: flex;
-      flex-direction: row;
-      flex-grow: 1;
-    }
-    .add-offer, .remove-offer, .add-offer-edit, .remove-offer-edit {
-      width: 10%;
-      text-align: center;
-      font-size: 2em;
-      color: $primary;
-      span {
-        padding: 23px 0 0;
-        display: block;
-      }
-    }
-    .remove-offer, .remove-offer-edit {
-      color: $danger;
-    }
-  }
-
-  .event-times {
-    margin-bottom: 20px;
-    .time-block {
-      display: flex; 
-      flex-direction: row;
-      flex-wrap: wrap;
-      margin-left: -10px;
-      margin-right: -10px;
-      margin-bottom: 25px;
-      position: relative;
-      .form-section {
-        flex-basis: 48%;
-        padding: 0 1%;
-        &.full {
-          flex-basis: 100%;
-        }
-        &.third {
-          flex-basis: 31.333333%;
-          padding: 0 1%;
-        }
-        p {
-          margin: 3px;
-          line-height: 1.1em;
-        }
-      }
-      .remove {
-        cursor: pointer;
-        display: flex;
-        align-items: center;
-        padding: 16px;
-        font-size: 1.5em;
-        position: absolute;
-        color: #c94949;
-        left: 0;
-        top: 39%;
-      }
-      &:not(:first-child) {
-        padding-left: 40px;
-      }
-    }
-
-  }
-}
-
-@import "mobile.scss"; 
+ 
