--- a/sass/calendar.scss
+++ b/sass/calendar.scss
@@ -128,7 +128,8 @@
     flex-wrap: wrap;
     padding: 25px;
     justify-content: space-between;
-
+    position: relative;
+    padding-bottom: 50px;
     button {
       &.event-meta-close {
         background: none;
@@ -138,6 +139,7 @@
         right: 0;
         font-size: 29px;
         padding: 3px 15px;
+        color: $light;
       }
 
     }
