--- a/sass/utilities.scss
+++ b/sass/utilities.scss
@@ -7,7 +7,7 @@
 }
 @mixin button-link {
   border: 1px solid #fff;
-  border-left: 5px solid #fff;
+  // border-left: 5px solid #fff;
   padding: 6px 8px;
   margin-bottom: 4px;
   font-size: .9em;
@@ -17,8 +17,8 @@
   width: 100%;
   @include transition(300ms);
   &:hover {
-    border-left-width: 10px;
-    background-color: rgba(255,255,255,.6);
+    // border-left-width: 10px;
+    // background-color: rgba(255,255,255,.6);
     @include transition(100ms);
   }
 }
