--- a/sass/calendar.scss
+++ b/sass/calendar.scss
@@ -112,6 +112,22 @@
             }
             
           }
+          &.members-only-event {
+            line-height: 1em;
+            font-size: .9em;
+          }
+          &.booking-event {
+            background-color: #f4f4f4;
+            border: 1px solid #bfbfbf;
+            padding: 2px;
+            margin-bottom: 3px;
+            font-size: .7em;
+            font-style: italic;
+            line-height: 1.15em;
+            .title {
+              font-weight: bold;
+            }
+          }
         }
       }
     }
