added instructor to sub event listing on class pages.

--- a/sass/calendarList.scss
+++ b/sass/calendarList.scss
@@ -10,7 +10,7 @@
         }
         .item_meta_container {
             display: flex;
-            flex-direction: column;
+            // flex-direction: column;
             justify-content: space-between;
             background-color: rgb(245, 245, 245); 
             border-radius: 20px;
