--- a/sass/mobile.scss
+++ b/sass/mobile.scss
@@ -79,18 +79,19 @@
     .meta_inner_container {
       flex-wrap: wrap;
       .featured-image {
-        width: 50%;
+        width: 33.3333%;
         img {
           width: 100%;
         }
       }
       .left-content {
-        width: 50%;
-        padding-left: 20px !important;
+        width: 43.3333%;
+        // padding-left: 20px !important;
       }
       .right-content {
-        width:100%;
+        width:23.3333%;
         margin-top: 30px !important;
+        padding-left: 0px !important;
       }
     }
   }
@@ -107,7 +108,7 @@
 @media (min-width: 992px) and (max-width: 1200px) {
   #publicCalendar, #mindEventList {
     .meta_inner_container {
-      flex-wrap: nowrap;
+      // flex-wrap: nowrap;
       .featured-image {
         width: 25%;
         img {
@@ -115,8 +116,8 @@
         }
       }
       .left-content {
-        // width:50%;
-        padding-left: 15px !important;
+        width:50%;
+        // padding-left: 15px !important;
       }
       .right-content {
         width: 25%;
@@ -137,7 +138,7 @@
 @media (min-width: 1200px) {
   #publicCalendar, #mindEventList {
     .meta_inner_container {
-      flex-wrap: nowrap;
+      // flex-wrap: nowrap;
       .featured-image {
         width: 25%;
         img {
@@ -145,8 +146,8 @@
         }
       }
       .left-content {
-        // width: 50%;
-        padding-left: 20px !important;
+        width: 50%;
+        // padding-left: 20px !important;
       }
       .right-content {
         width: 25%;
